# openlegalcommentary

./: .gitignore  CLAUDE.md  LICENSE-CODE  LICENSE-CONTENT  pyproject.toml  state-bv-caselaw.json  state-bv.json  state-vwvg.json
agents/: __init__.py  anthropic_client.py  bootstrap.py  config.py  coordinator.py  deep_generation.py  evaluator.py  generation.py  law_agent.py  mcp_client.py  openai_client.py  pipeline.py  prompts.py  references.py  research_agent.py  translator.py
docs/: per-article-prompts-design.md  workplan-world-class-commentary.md  world-class-commentary-design.md
export/: huggingface.py
guidelines/: bgfa.md  bv.md  concepts.md  contested.md  evaluate.md  global.md  or.md  schkg.md  stgb.md  stpo.md  vwvg.md  zgb.md  zpo.md
scripts/: ab_test_opus_thinking.py  article_lists.json  article_texts.json  article_texts_en.json  article_texts_fr.json  article_texts_it.json  article_titles_i18n.json  cantonal_laws.json  citation_patterns.py  classify_articles.py  commentary_schema.py  digest_botschaften.py  digest_commentary.py  discover_botschaften.py  download_botschaften.py  extract_botschaften.py  extract_commentary.py  fetch_article_texts_i18n.py  fetch_articles.py  fetch_cantonal_laws.py  fix_citations.py  generate_search_index.py  law_structures.json  law_structures_i18n.json  preparatory_materials_pipeline.py  quality_dashboard.py  scaffold_content.py  schema.py  validate_content.py  verify_citations.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_bootstrap.py  test_citation_patterns.py  test_commentary_integration.py  (+24 more)
(+21716 files in other folders)
